--- a/package.json
+++ b/package.json
@@ -1,22 +1,40 @@
 {
-  "name": "spotify",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@types/node": "20.4.1",
-    "@types/react": "18.2.14",
-    "@types/react-dom": "18.2.6",
-    "eslint": "8.44.0",
-    "eslint-config-next": "13.4.9",
-    "next": "13.4.9",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.1.6"
-  }
+    "name": "spotify",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@sanity/client": "^3.2.0",
+        "@sanity/image-url": "^1.0.2",
+        "@sanity/vision": "^3.14.1",
+        "@stripe/react-stripe-js": "^2.1.1",
+        "@stripe/stripe-js": "^1.54.1",
+        "@types/node": "20.4.1",
+        "@types/react": "18.2.14",
+        "@types/react-dom": "18.2.6",
+        "canvas-confetti": "^1.6.0",
+        "eslint": "8.44.0",
+        "eslint-config-next": "13.4.9",
+        "next": "13.4.9",
+        "next-sanity": "^5.1.1",
+        "next-sanity-image": "^3.2.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hot-toast": "^2.2.0",
+        "react-icons": "^4.3.1",
+        "sanity": "^3.14.1",
+        "stripe": "^8.222.0",
+        "typescript": "5.1.6"
+    },
+    "devDependencies": {
+        "@types/canvas-confetti": "^1.6.0",
+        "autoprefixer": "^10.4.14",
+        "postcss": "^8.4.24",
+        "tailwindcss": "^3.3.2"
+    }
 }
